<resources>
    <string name="app_name">TiendaVirtualMovil</string>
    
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_bienvenida">BienvenidaActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_perfil">PerfilActivity</string>
    <string name="title_activity_registro">RegistroActivity</string>
    <string name="bienvenido_a_mitienda">¡Bienvenido!</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="registrarse">Registrarse</string>
    <string name="correo_electr_nico">Correo electrónico</string>
    <string name="contrase_a">Contraseña</string>
    <string name="entrar">Entrar</string>
    <string name="crear_cuenta">Crear cuenta</string>
    <string name="registro_de_cliente">Registro de Cliente</string>
    <string name="nombre_completo">Nombre completo</string>
    <string name="registrar">Registrar</string>
    <string name="nombre_del_usuario">Nombre del Usuario</string>
    <string name="correo_ejemplo_com">correo@ejemplo.com</string>
    <string name="cerrar_sesi_n">Cerrar sesión</string>
    <string name="nombre_del_usuarioo">Nombre del Usuario</string>
    <string name="correo_ejemplo_comm">correo@ejemplo.com</string>
    <string name="tvPasswordUsuario">••••••</string>
    <string name="title_activity_main_menu">MainMenuActivity</string>
    <string name="logo">Logo</string>
    <string name="title_activity_crear_producto">CrearProductoActivity</string>
    <string name="nombre_del_producto">Nombre del producto</string>
    <string name="descripci_n_del_producto">Descripción del producto</string>
    <string name="_0_00">$0.00</string>
    <string name="imagen_producto">imagen_producto</string>
    <string name="eliminar">Eliminar</string>
    <string name="editar">Editar</string>
    <string name="menu_producto">menu producto</string>
    <string name="registrar_como_administrador">Registrar como administrador</string>
    <string name="title_activity_carrito">CarritoActivity</string>
    <string name="total_0_00">Total: $0.00</string>
    <string name="vaciar_carrito">Vaciar carrito</string>
    <string name="agregar">Agregar</string>
    <string name="contacto">Contacto</string>
    <string name="mi_perfil">Mi perfil</string>
    <string name="ver_carrito">Ver carrito</string>
    <string name="crear_producto">Crear producto</string>
    <string name="title_activity_contacto">Contacto</string>
    <string name="d_nde_nos_encontramos">¿Dónde nos encontramos?</string>
    <string name="nombre_del_productoo">Nombre del producto</string>
    <string name="descripci_n">Descripción</string>
    <string name="precio">Precio</string>
    <string name="vista_previa_de_imagen">Vista previa de imagen</string>
    <string name="elegir_imagen">Elegir imagen</string>
    <string name="guardar_producto">Guardar producto</string>
</resources>