<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="24dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        style="@style/TitleText"
        android:layout_width="273dp"
        android:layout_height="100dp"
        android:layout_marginBottom="24dp"
        android:text="@string/iniciar_sesi_n"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etEmail"
        android:hint="@string/correo_electr_nico"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/etPassword"
        android:hint="@string/contrase_a"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"/>

    <Button
        android:id="@+id/btnLogin"
        style="@style/BotonPrincipal"
        android:text="@string/entrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/btnRegistrar"
        style="@style/BotonPrincipal"
        android:text="@string/crear_cuenta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"/>
</LinearLayout>
