<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="12dp"
    android:background="#FFFFFF"
    android:layout_marginBottom="8dp"
    android:elevation="2dp">

    <ImageView
        android:id="@+id/ivProducto"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginEnd="12dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_launcher_background"
        android:contentDescription="@string/imagen_producto" />

    <LinearLayout
        android:layout_width="294dp"
        android:layout_height="84dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre_del_producto"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvDescripcion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descripci_n_del_producto"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvPrecio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:text="@string/_0_00"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/btnMenuProducto"
            android:layout_width="58dp"
            android:layout_height="58dp"
            android:layout_gravity="end|center_vertical"
            android:contentDescription="@string/menu_producto"
            android:padding="4dp"
            android:src="@drawable/ic_more_vert"/>
    </LinearLayout>

</LinearLayout>

